--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page Name="fuckPage" 
+﻿<Page Name="MainPages" 
     x:Class="DimseLab_Aflevering.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -276,7 +276,7 @@
                            FontWeight="Bold"
                            Margin="10,15,10,10"
                            VerticalAlignment="Top" />
-                <ListView ItemsSource="{Binding MyProjects, Mode=TwoWay}"
+                <ListView ItemsSource="{Binding MyProjects}"
                           Height="500"
                           Width="500"
                           HorizontalAlignment="Left"
@@ -291,6 +291,7 @@
                                     <RowDefinition />
                                     <RowDefinition />
                                     <RowDefinition />
+                                    <RowDefinition/>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
@@ -305,14 +306,17 @@
                                            Grid.Row="1"
                                            Grid.Column="0"
                                            TextWrapping="Wrap" />
-                                <MenuFlyoutSeparator Grid.Row="2"
+                                <TextBlock Text="{Binding ProjectEndDate}"
+                                           Grid.Column="0"
+                                           Grid.Row="2" />
+                                <MenuFlyoutSeparator Grid.Row="3"
                                                      Grid.Column="0"
                                                      Grid.ColumnSpan="2" />
                                 <Grid Grid.Row="1"
                                       Grid.Column="1"
                                       HorizontalAlignment="Center"
                                       VerticalAlignment="Top">
-                                    <Button Command="{Binding ElementName=fuckPage, Path=DataContext.SelectedProjectCommand}"
+                                    <Button Command="{Binding ElementName=MainPages, Path=DataContext.SelectedProjectCommand}"
                                             Margin="10"
                                             Width="30"
                                             Height="30"
